"[TDJ] Develop new functionalities"